Corrigindo alguns controllers e refatorando a parte de produtos do js